apps/metrics-server/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: metrics-server
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
